--- a/third/style.css
+++ b/third/style.css
@@ -21,7 +21,7 @@ body {
     padding: 40px 40px 50px 40px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 19px;
-    overflow: hidden;
+    overflow: scroll;
 
 }
 .row3 {
